<resources>
    <string name="app_name">Albedo</string>

    <!-- Main Strings -->
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="token">token</string>
    <string name="main_not_logged_in">Not logged in\n\nClick Profile button to sign in</string>
    <string name="main_logged_in">Logged in as: </string>

    <!-- Profile Logged Out Strings -->
    <string name="profile_username_label">Username:</string>
    <string name="profile_password_label">Password:</string>
    <string name="profile_log_in">Log In</string>
    <string name="profile_forgot_password">Forgot Password?</string>
    <!-- Profile Logged In Strings -->
    <string name="profile_staff_label">Staff:</string>
    <string name="profile_name_label">Name:</string>
    <string name="profile_station_label">Station:</string>
    <string name="profile_town_label">Town:</string>
    <string name="profile_state_label">State:</string>
    <string name="profile_reset_password">Reset Password</string>
    <string name="profile_log_out">Log Out</string>

    <!-- Survey Strings -->
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="title_location">Location</string>
    <string name="title_start_time">Start Time</string>
    <string name="title_sky_analysis">Sky Analysis</string>
    <string name="title_snow_state">Snow State</string>
    <string name="title_patchiness_percentage">Patchiness Percentage</string>
    <string name="title_snow_surface_age">Snow Surface Age</string>
    <string name="title_ground_cover">Ground Cover</string>
    <string name="title_incoming_shortwaves">Incoming Shortwaves</string>
    <string name="title_outgoing_shortwaves">Outgoing Shortwaves</string>
    <string name="title_additional_data">Additional Snow Depth and Density Data</string>
    <string name="title_notes">Notes</string>
    <string name="title_end_time">End Time</string>
    <string name="title_summary">Summary</string>
    <!-- Location -->
    <string name="survey_location_question">Where did the observation take place?</string>
    <string name="survey_location_duty_label">Station ID:</string>
    <string name="survey_location_lat_label">Latitude:</string>
    <string name="survey_location_lon_label">Longitude:</string>
    <string name="survey_location_current_location_label">Use Current Location</string>
    <!-- Start Time -->
    <string name="survey_start_time_question">When did the observation start?</string>
    <string name="survey_start_time_day_label">Date:</string>
    <string name="survey_start_time_set_date_label">Set Date</string>
    <string name="survey_start_time_time_label">Time:</string>
    <string name="survey_start_time_set_time_label">Set Time</string>
    <!-- Sky Analysis -->
    <string name="survey_sky_analysis_question">Which of the following best describe the sky during observation?</string>
    <string name="survey_sky_analysis_ACLR_label">All Clear: 0% cloud cover</string>
    <string name="survey_sky_analysis_CLR_label">Clear: 0–30% cloud cover</string>
    <string name="survey_sky_analysis_PCL_label">Partly Cloudy: 30–70% cloud cover</string>
    <string name="survey_sky_analysis_OVC_label">Overcast: 70–100% cloud cover</string>
    <!-- Snow State -->
    <string name="survey_snow_state_question">Which of the following best describes the snow right now?</string>
    <string name="survey_snow_state_snow_covered_label">Snow Covered</string>
    <string name="survey_snow_state_patchy_snow_label">Patchy Snow</string>
    <string name="survey_snow_state_snow_free_dormant_label">Snow-free/Dormant</string>
    <string name="survey_snow_state_snow_free_green_label">Snow-free/Green</string>
    <string name="survey_snow_state_dormant_explanation">Snow-free/Dormant means that there is no snow on the ground and dead grass.</string>
    <string name="survey_snow_state_green_explanation">Snow-free/Green means that there is no snow on the ground and living grass.</string>
    <!-- Patchiness Percentage -->
    <string name="survey_patchiness_percentage_question">Estimate the percentage of the ground that is covered by snow:</string>
    <!-- Ground Cover -->
    <string name="survey_ground_cover_question">What type of ground is below the snow?</string>
    <string name="survey_ground_cover_grass_living_label">Grass (Living)</string>
    <string name="survey_ground_cover_grass_dead_label">Grass (Dead)</string>
    <string name="survey_ground_cover_wet_soil_label">Wet Soil</string>
    <string name="survey_ground_cover_dry_soil_label">Dry Soil</string>
    <string name="survey_ground_cover_pavement_label">Pavement</string>
    <string name="survey_ground_cover_wooden_deck_label">Wooden Deck</string>
    <string name="survey_ground_cover_other_label">Other</string>
    <!-- Snow Surface Age -->
    <string name="survey_snow_surface_age_spinner_label">Age:</string>
    <string name="survey_snow_surface_age_snow_melt">Snow melt</string>
    <!-- Incoming Shortwave -->
    <string name="survey_incoming_shortwave_question">What are the incoming shortwave readings?</string>
    <string name="survey_incoming_shortwave_label_1">Incoming Shortwave 1:</string>
    <string name="survey_incoming_shortwave_label_2">Incoming Shortwave 2:</string>
    <string name="survey_incoming_shortwave_label_3">Incoming Shortwave 3:</string>
    <!-- Incoming Picture -->
    <string name="survey_picture_incoming_label_1">Take Photo - 1 of 2</string>
    <string name="survey_picture_incoming_label_2">Face towards the sun. Keep your arm and phone parallel to the ground.</string>
    <string name="survey_picture_incoming_label_3">For this phone, the screen will be facing the sky. Be sure your shadow does not appear in the image.</string>
    <string name="survey_picture_take_photo_label">Take Photo</string>
    <string name="survey_picture_taking_photo_label">Taking Photo</string>
    <string name="survey_picture_retake_photo_label">Retake Photo</string>
    <string name="survey_picture_use_photo_label">Use Photo</string>
    <!-- Outgoing Shortwave -->
    <string name="survey_outgoing_shortwave_question">What are the outgoing shortwave readings?</string>
    <string name="survey_outgoing_shortwave_label_1">Outgoing Shortwave 1:</string>
    <string name="survey_outgoing_shortwave_label_2">Outgoing Shortwave 2:</string>
    <string name="survey_outgoing_shortwave_label_3">Outgoing Shortwave 3:</string>
    <!-- Outgoing Picture -->
    <string name="survey_picture_outgoing_label_1">Take Photo - 2 of 2</string>
    <string name="survey_picture_outgoing_label_2">Face towards the ground. Keep your arm and phone parallel to the ground.</string>
    <string name="survey_picture_outgoing_label_3">For this phone, the screen will be facing the ground. Be sure your shadow does not appear in the image.</string>
    <!-- Additional Data -->
    <string name="survey_additional_data_question">These values are optional and can be entered if the proper equipment is available.</string>
    <string name="survey_additional_data_snow_depth_label">Snow Depth:</string>
    <string name="units_in">in.</string>
    <string name="units_cm">cm.</string>
    <string name="survey_additional_data_weight_snow_label">Tube + Cap + Snow Weight:</string>
    <string name="units_lbs">lbs.</string>
    <string name="units_g">g.</string>
    <string name="survey_additional_data_weight_no_snow_label">Tube + Cap Weight:</string>
    <string name="survey_additional_data_snow_temperature_label">Snow Temperature:</string>
    <string name="units_F">°F</string>
    <string name="units_C">°C</string>
    <!-- Notes -->
    <string name="survey_notes_question">Observation notes (ie: debris on snow, ice surface, footprints, rain-on-snow)</string>
    <!-- End Time -->
    <string name="survey_end_time_question">When did the observation end?</string>
    <string name="survey_end_time_time_label">Time:</string>
    <string name="survey_end_time_set_time_label">Set Time</string>
    <!-- Summary -->
    <string name="survey_summary_title">Summary</string>
    <!-- Location -->
    <string name="survey_summary_header_location">Location</string>
    <string name="survey_summary_station_ID">Station ID: </string>
    <string name="survey_summary_latitude">Latitude: </string>
    <string name="survey_summary_longitude">Longitude: </string>
    <!-- Date and Time -->
    <string name="survey_summary_header_date_time">Date and Time</string>
    <string name="survey_summary_date">Date: </string>
    <string name="survey_summary_start_time">Start Time: </string>
    <string name="survey_summary_end_time">End Time: </string>
    <!-- Albedo -->
    <string name="survey_summary_header_albedo">Albedo</string>
    <string name="survey_summary_incoming_all">Incoming Shortwaves: </string>
    <string name="survey_summary_incoming_1">Incoming 1: </string>
    <string name="survey_summary_incoming_2">Incoming 2: </string>
    <string name="survey_summary_incoming_3">Incoming 3: </string>
    <string name="survey_summary_outgoing_all">Outgoing Shortwaves: </string>
    <string name="survey_summary_outgoing_1">Outgoing 1: </string>
    <string name="survey_summary_outgoing_2">Outgoing 2: </string>
    <string name="survey_summary_outgoing_3">Outgoing 3: </string>
    <string name="survey_summary_albedo">Albedo: </string>
    <!-- Sky and Ground -->
    <string name="survey_summary_header_sky_ground">Sky and Ground</string>
    <string name="survey_summary_sky">Sky: </string>
    <string name="survey_summary_snow_state">Snow State: </string>
    <string name="survey_summary_patchiness_percentage">Patchiness Percentage: </string>
    <string name="survey_summary_ground_cover">Ground Cover: </string>
    <string name="survey_summary_snow_surface_age">Snow Surface Age: </string>
    <string name="survey_summary_snow_melt">Snow Melt: </string>
    <!-- Additional Information -->
    <string name="survey_summary_header_additional_information">Additional Information</string>
    <string name="survey_summary_depth">Snow Depth: </string>
    <string name="survey_summary_temp">Snow Temp: </string>
    <string name="survey_summary_weight">Snow Weight: </string>
    <!-- Notes -->
    <string name="survey_summary_header_notes">Notes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
