<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="chrisandbrendanappdev.unhalbedo.fragments.SurveySummary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/survey_question_margin_bottom"
        android:layout_marginTop="@dimen/survey_question_margin_top"
        android:text="@string/title_summary"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/survey_summary_title_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/survey_summary_header_padding_top"
        android:text="@string/survey_summary_header_location"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/survey_summary_header_size" />

    <TextView
        android:id="@+id/summary_stationID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_summary_station_ID"
        android:textSize="@dimen/survey_summary_data_size"/>

    <TextView
        android:id="@+id/summary_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_summary_latitude"
        android:textSize="@dimen/survey_summary_data_size"/>

    <TextView
        android:id="@+id/summary_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_summary_longitude"
        android:textSize="@dimen/survey_summary_data_size"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/survey_summary_header_padding_top"
        android:text="@string/survey_summary_header_date_time"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/survey_summary_header_size" />

    <TextView
        android:id="@+id/summary_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_summary_date"
        android:textSize="@dimen/survey_summary_data_size"/>

    <TextView
        android:id="@+id/summary_start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_summary_start_time"
        android:textSize="@dimen/survey_summary_data_size"/>

    <TextView
        android:id="@+id/summary_end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_summary_end_time"
        android:textSize="@dimen/survey_summary_data_size"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/survey_summary_header_padding_top"
        android:text="@string/survey_summary_header_albedo"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/survey_summary_header_size" />

    <TextView
        android:id="@+id/summary_incoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_summary_incoming_all"
        android:textSize="@dimen/survey_summary_data_size"/>

    <TextView
        android:id="@+id/summary_outgoing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_summary_outgoing_all"
        android:textSize="@dimen/survey_summary_data_size"/>

    <TextView
        android:id="@+id/summary_albedo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_summary_albedo"
        android:textSize="@dimen/survey_summary_data_size"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/survey_summary_header_padding_top"
        android:text="@string/survey_summary_header_sky_ground"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/survey_summary_header_size" />

    <TextView
        android:id="@+id/summary_sky"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_summary_sky"
        android:textSize="@dimen/survey_summary_data_size"/>

    <TextView
        android:id="@+id/summary_snow_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_summary_snow_state"
        android:textSize="@dimen/survey_summary_data_size"/>

    <TextView
        android:id="@+id/summary_ground_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_summary_ground_cover"
        android:textSize="@dimen/survey_summary_data_size"/>

    <TextView
        android:id="@+id/summary_surface_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_summary_snow_surface_age"
        android:textSize="@dimen/survey_summary_data_size"/>

    <TextView
        android:id="@+id/summary_snow_melt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_summary_snow_melt"
        android:textSize="@dimen/survey_summary_data_size"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/survey_summary_header_padding_top"
        android:text="@string/survey_summary_header_additional_information"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/survey_summary_header_size" />

    <TextView
        android:id="@+id/summary_depth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_summary_depth"
        android:textSize="@dimen/survey_summary_data_size"/>

    <TextView
        android:id="@+id/summary_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_summary_temp"
        android:textSize="@dimen/survey_summary_data_size"/>

    <TextView
        android:id="@+id/summary_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_summary_weight"
        android:textSize="@dimen/survey_summary_data_size"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/survey_summary_header_padding_top"
        android:text="@string/survey_summary_header_notes"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/survey_summary_header_size" />

    <TextView
        android:id="@+id/summary_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/survey_summary_data_size"/>

    <Button
        android:id="@+id/survey_summary_submit"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:textSize="@dimen/survey_next_text_size" />

</LinearLayout>
