<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="chrisandbrendanappdev.unhalbedo.fragments.ProfileLoggedIn">

    <TextView
        android:id="@+id/profile_in_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/profile_username_label"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/profile_info" />

    <TextView
        android:id="@+id/profile_in_staff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/profile_staff_label"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/profile_info" />

    <TextView
        android:id="@+id/profile_in_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/profile_name_label"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/profile_info" />

    <TextView
        android:id="@+id/profile_in_station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/profile_station_label"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/profile_info" />

    <TextView
        android:id="@+id/profile_in_town"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/profile_town_label"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/profile_info" />

    <TextView
        android:id="@+id/profile_in_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/profile_state_label"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/profile_info" />

    <Button
        android:id="@+id/profile_in_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/profile_reset_password" />

    <Button
        android:id="@+id/profile_in_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/profile_log_out" />
</LinearLayout>
