<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="chrisandbrendanappdev.unhalbedo.fragments.SurveyLocation">

    <TextView
        android:id="@+id/survey_location_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginBottom="@dimen/survey_question_margin_bottom"
        android:layout_marginTop="@dimen/survey_question_margin_top"
        android:text="@string/survey_location_question"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/survey_question_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_location_duty_label" />

    <Spinner
        android:id="@+id/survey_location_duty_station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_location_lat_label" />

    <EditText
        android:id="@+id/survey_location_lat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_location_lon_label" />

    <EditText
        android:id="@+id/survey_location_lon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/survey_location_current_loc"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/survey_location_current_location_label" />

    <Button
        android:id="@+id/survey_location_next"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/next"
        android:textSize="@dimen/survey_next_text_size" />
</LinearLayout>
