<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="chrisandbrendanappdev.unhalbedo.fragments.SurveyIncomingShortwaves">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/survey_question_margin_bottom"
        android:layout_marginTop="@dimen/survey_question_margin_top"
        android:text="@string/survey_incoming_shortwave_question"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/survey_question_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_incoming_shortwave_label_1" />

    <EditText
        android:id="@+id/survey_incoming_shortwave_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_incoming_shortwave_label_2" />

    <EditText
        android:id="@+id/survey_incoming_shortwave_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_incoming_shortwave_label_3" />

    <EditText
        android:id="@+id/survey_incoming_shortwave_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/survey_incoming_shortwave_next"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/next"
        android:textSize="@dimen/survey_next_text_size" />

</LinearLayout>
