<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="chrisandbrendanappdev.unhalbedo.fragments.SurveySnowSurfaceAge">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/survey_question_margin_bottom"
        android:layout_marginTop="@dimen/survey_question_margin_top"
        android:gravity="center"
        android:text="@string/survey_snow_state_question"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/survey_question_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_snow_surface_age_spinner_label" />

    <Spinner
        android:id="@+id/survey_snow_surface_age_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/survey_snow_surface_age_melt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/survey_snow_surface_age_snow_melt" />

    <Button
        android:id="@+id/survey_snow_surface_age_next"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/next"
        android:textSize="@dimen/survey_next_text_size" />

</LinearLayout>
